# fapi_edu

./: .env.example  .gitignore  alembic.ini  pyproject.toml  settings.py
alembic_db/: env.py
alembic_db/versions/: 265448b92f6b_add_genre_index.py  371691e7b10f_add_genres_table.py  6e3a18f82c5a_add_book_and_writers_tables.py  7e82132f7d4a_add_book_genres_table.py  c9b65af3b3fc_add_users_table.py  d4c2a4d78115_add_book_writers_table.py  fbd02f8a2927_add_indexes.py  fcc9c1c84fd7_add_users_table.py
app/: crud.py  library_app.py  main.py  middleware.py  models.py  schemas.py
app/internal/: __init__.py  admin.py  email.py  roles.py  users.py
app/media/books/: 1450114898_white_fang.epub
app/routers/: __init__.py  books.py  users.py  writers.py
app/templates/email/: new_user_email.html
library_app/: crud.py  database.py  library_router.py  main.py  models.py  schemas.py
src/: crud.py  main.py  schemas.py
src/internal/: __init__.py  admin.py  roles.py  users.py
src/models/: __init__.py  book.py  book_genre.py  book_writer.py  genre.py  user.py  writer.py
src/routers/: books.py  users.py  writers.py
